--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Portfolio Website</title>
+    <title>Loukik | Portfolio</title>
+    <meta itemprop="name" content="Loukik | Portfolio">
+    <meta itemprop="description" content="Self Developed personal website build with React.js">
+    <meta name="description" content="Self Developed personal website build with React.js">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
